crates/toml_edit/tests/snapshots/invalid/array/double-comma-02.stderr
TOML parse error at line 1, column 23
  |
1 | double-comma-2 = [1,2,,]
  |                       ^
extra comma in array, expected value
